# talks

./: README.md
cppcon/2015/expression_templates/: README.md
cppcon/2015/expression_templates/derivative/: constant.hpp  derivative.cpp  evaluate.hpp  expression.hpp  grammar.hpp
cppcon/2015/expression_templates/past/: basic_crtp_et.cpp  semantic.cpp  semantic_base.cpp
cppcon/2015/expression_templates/present/: proto101.cpp  proto_custom.cpp  proto_eval.cpp  proto_validate.cpp  proto_wrap.cpp
cppcon/2015/expression_templates/slides/: basic.tex  beamercolorthememetascale.sty  beamerinnerthemefancy.sty  beamerthemeTorino.sty  conclusion.tex  introduction.tex  main.tex  next.tex  proto.tex  slideimages.tex  slidelst.tex  slidetheme.tex
cppfrug/2019/issue_33/: example_01.cpp  example_02.cpp  example_03.cpp  example_04.cpp  example_05.cpp  example_06.cpp  example_07.cpp  example_08.cpp
cppnow/2011/bsppp/: applications.tex  architecture.tex  bsppp.tex  conclusion.tex  introduction.tex  main.tex  slideimages.tex  slidelst.tex
cppnow/2011/bsppp/figure/: bsp_application.graffle  bsp_machine.graffle  bsp_program.graffle  bsp_proj.graffle  bsp_put.graffle
cppnow/2011/proto/: README.rst
cppnow/2011/proto/introduction/: introduction-00.cpp  introduction-01.cpp
cppnow/2011/proto/slides/: main.tex  slideimages.tex
cppnow/2011/simd/: interface.tex  introduction.tex  simd.tex  simdspec.tex  simdstl.tex  slideslst.tex
cppnow/2011/simd/examples/: CMakeLists.txt
cppnow/2011/simd/examples/memcpy/: CMakeLists.txt  memcpy.cpp  test_memcpy.cpp
(+16 files in other folders)
